# pypride

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: main.yaml
cmake/: AddExtension.cmake  FortranExtension.cmake
examples/: GR035.vix  config.yaml  examine_results.py  main.py
examples/output-gr035/: GR035_Bd.del  GR035_Br.del  GR035_Cd.del  GR035_Fd.del  GR035_Hb.del  GR035_Hh.del  GR035_Hn.del  GR035_Ke.del  GR035_Km.del  GR035_Kp.del  GR035_Ku.del  GR035_La.del  GR035_Mc.del  GR035_Mk.del  GR035_Nl.del  GR035_On.del  GR035_Ov.del  GR035_Pt.del  GR035_Sc.del  GR035_Sv.del  GR035_T6.del  GR035_Ur.del  GR035_Wb.del  GR035_Ww.del  GR035_Wz.del  GR035_Yg.del  GR035_Ym.del  GR035_Ys.del  GR035_Zc.del
src/iers/dehanttideinel/: DAT.F  DEHANTTIDEINEL.F  dehanttideinel.pyf
src/iers/eops/: INTERP.F  interp.pyf
src/iers/hardisp/: hardisp.pyf  hardisp_subroutine.F
src/pride/: __init__.py  _core.py  constants.py  core.py  logger.py  types.py  utils.py
src/pride/_delays/: __init__.py  core.py  models.py
src/pride/coordinates/: __init__.py  core.py
src/pride/data/: antenna-info.txt  config.yaml  glo.sit  glo.vel  spacecraft.yaml  station_names.yaml
src/pride/data/frequency_ramping/: ramp1w.mex  ramp1w.vex
src/pride/delays/: __init__.py  core.py  models.py
src/pride/displacements/: __init__.py  core.py  corrections.py  models.py
src/pride/experiment/: __core.py  __init__.py  __source.py  baseline.py  core.py  experiment.py  observation.py  oldsource.py  source.py  station.py
src/pride/geophysical/: corrections.py
src/pride/io/: __init__.py  frequency.py  packing.py  resources.py  setup.py  spice.py  vex.py
src/vienna/vmf3/: vmf3.pyf
