[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "astropy>=6.1.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.2",
    "scipy>=1.12.0",
    "requests>=2.25",
    "spiceypy>=6.0.0",
    "unlzw3>=0.2.2",
    "ply>=3.11",
    "multidict>=6.1.0"
]
name = "pride"
version = "0.1.0"
description = ""
authors = [
    { name = "Alfonso Sánchez Rodríguez", email = "a.sanchezrodriguez@student.tudelft.nl" }
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = [
    "src"
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = false
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
